<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="foodsFragment"
            type="com.metehanbolat.graduateproject.view.fragments.FoodsFragment" />
        <variable
            name="foodAdapter"
            type="com.metehanbolat.graduateproject.adapter.RecyclerFoodAdapter" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_foods_xml_constraintlayout3_scene"
        tools:context=".view.fragments.FoodsFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/exit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:onClick="@{() -> foodsFragment.signOut()}"
            android:src="@drawable/ic_all"
            app:layout_constraintBottom_toBottomOf="@id/locationLinear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/locationLinear" />

        <LinearLayout
            android:id="@+id/locationLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_location_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/gotham_bold"
                android:gravity="center"
                android:text="@string/city"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gotham_bold"
                android:gravity="center"
                android:text="@string/nation"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationLinear">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/choose_the"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/food_you_want"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/edit_text_background_two"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="6dp"
            android:hint="@string/search_restaurant"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BEBEBE"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textLinear"
            app:layout_constraintTop_toBottomOf="@id/locationLinear" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:adapter="@{foodAdapter}"
            android:overScrollMode="never"
            app:elevation="1dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchEditText"
            app:spanCount="2" />

        <ImageView
            android:id="@+id/foodsFragmentCartButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:elevation="3dp"
            android:onClick="@{() -> foodsFragment.button(foodsFragmentCartButton)}"
            android:src="@drawable/elipse_cart"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
            app:layout_constraintEnd_toEndOf="@id/bottom_nav"
            app:layout_constraintStart_toStartOf="@id/bottom_nav"
            app:layout_constraintTop_toTopOf="@id/bottom_nav" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="#FF0036"
            app:elevation="2dp"
            app:itemIconSize="32dp"
            app:itemIconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav_menu" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>